# plate_detection_w_tinyml

./: .gitignore  LICENSE  README.md
inference_cc/plate_detection_arm/models/plate/: full_int8.tflite  int8.tflite
inference_cc/plate_detection_arm/models/plate/experiments/: dynamic.tflite
inference_cc/plate_detection_x86/: CMakeLists.txt  compare.cc  experiments.cc  main.cc  raw.cc
inference_cc/plate_detection_x86/load_image/: load_image  load_image.c  load_write_image  load_write_resize
inference_cc/plate_detection_x86/mains_models/: 01-main.cc  02-main.cc  03 - main - kerasocr quebrado.cc  04 - main - Funcional.cc  05 - main - final.cc  06 - main -oficial.cc  07 - main_original.cc  CMakeLists-original.txt  main.md
inference_cc/plate_detection_x86/models/plate/: integer_only.tflite
inference_cc/plate_detection_x86/research/: c++.md  cmake.md  demo.cpp  step_by_step.md
inference_python/: int_model.py  labelimg_xml_to_csv.py  models.py  plot _new.ipynb  tflite_basic_ocr_tesseract.py  tflite_basic_ocr_tesseract_video.py
inference_python/examples/: create_placas.py  tflite_basic.py  tflite_basic_ocr_keras.py  tflite_basic_ocr_personal.py
inference_python/experiments/: dataset_memoria.ods  experiments.csv  experiments_cc.csv  experiments_cc_old.csv  info.csv  result_cc.csv
inference_python/notebook/: debug_full_integer.ipynb  debug_integer1.ipynb  debug_integer_only.ipynb  plot.ipynb
models_tflite/: full_integer.tflite
train_model/: train_model.ipynb
train_model/Tensorflow/workspace/models/: pipeline.config
